Added some elements and styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,20 @@
 </head>
 <body>
     <div id="content">
+    <div class="header">
+        <h1>TO-DO</h1>
+    </div>
 
+    <div class="lists">
+        <div><h2>Home</h2></div>
+        <div><h2>Today</h2></div>
+        <div><h2>Week</h2></div>
+        <div><h2>Projects</h2></div>
+    </div>
+
+    <div class="list-contents">
+
+    </div>
         
 
 
