Worked on todo-list css

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,17 @@
     </div>
 
     <div class="list-contents">
+        <div class="todo">
+            <div class="todo-1">
+                <p>Brush teeth</p>
+            </div>
+            <div class="todo-2">
+                <div>DETAILS</div>
+                <div>DATE</div>
+                <div>EDIT</div>
+                <div>DELETE</div>
+            </div>
+        </div>
 
     </div>
         
