--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
         <div><h2>Today</h2></div>
         <div><h2>Week</h2></div>
         <div><h2>Projects</h2></div>
+
+        <div class="create">+</div>
     </div>
 
     <div class="list-contents">
@@ -32,8 +34,7 @@
         </div>
 
     </div>
-        
-
+    
 
     </div>
 </body>
