--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                 <p>Brush teeth</p>
             </div>
             <div class="todo-2">
-                <div>DETAILS</div>
+                <div class="details">DETAILS</div>
                 <div>DATE</div>
                 <div>EDIT</div>
                 <div>DELETE</div>
